# SOA_19_G_7

./: CMakeLists.txt  README.md  file.txt  makefile  memoria_soa.docx  ~$moria_soa.docx
files/: ext2_4096Block_1
include/: argval.h  ext4.h  fat32.h  types.h  view.h
montserrat/: makefile
montserrat/include/: argval.h  date.h  ext4.h  fat32.h  fat32types.h  identifier.h  view.h
montserrat/src/: date.c  ext4.c  fat32.c  identifier.c  main.c  view.c
src/: argval.c  date.c  date.h  endian.c  endian.h  ext4.c  ext4.h  ext4struct.c  ext4struct.h  ext4types.h  fat32.c  fat32.h  fat32types.h  filesystemIdentifier.c  filesystemIdentifier.h  identifier.c  identifier.h  main.c  types.h  view.c  view.h
